--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type='text/css' href="bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type='text/css' href="css/style.css">
-    <title>Minha página</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type='text/css' href="bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type='text/css' href="css/style.css">
+        <title>Minha página</title>
+    </head>
+
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-ligth">
+            <a class="navbar-brand" href="#">
+                <img src="img/logoGL.png" width="130px"/>
+            </a>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Quem somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Parceiros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Serviços</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </body>
 </html>
