--- a/index.html
+++ b/index.html
@@ -16,16 +16,52 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quem somos</a>
+                        <a class="nav-link" href="#quemsomos">Quem somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Parceiros</a>
+                        <a class="nav-link" href="#servicos">servicos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Serviços</a>
+                        <a class="nav-link" href="#parceiros">Parceiros</a>
                     </li>
                 </ul>
             </div>
         </nav>
+        <section id="quemsomos">
+            <div class="container-fluid quem-somos text-center margin">
+                <h2>Quem somos?</h2>
+                <img src="img/time.png" class="rounded-circle" width="300px">
+                <h4>Somos um time coprometido com os resultados!</h4>
+            </div>
+        </section>
+        <section id="servicos">
+            <div class="container-fluid servicos text-center margin">
+                <h2>Serviços</h2>
+                <img src="img/site3.jpg" class="rounded-circle" width="300px" height="300px">
+                <h4>Atendemos a todo Brasil com máxima eficiência e prontidão.</h4>
+            </div>
+        </section>
+        <section id="parceiros">
+            <div class="container-fluid parceiros text-center margin">
+                <h2>Os Nossos Parceiros</h2>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3">
+                            <img src="img/ibmlogo.png" class="ibm" width="230px">
+                        </div>
+                        <div class="col-lg-3">
+                            <img src="img/googlelogo.png" width="180px">
+                        </div>
+                        <div class="col-lg-3">
+                            <img src="img/applelogo.png" width="200px">
+                        </div>
+                        <div class="col-lg-3">
+                            <img src="img/intellogo.png" width="200px">
+                        </div>
+                    </div>
+                </div>
+                <h4>Contamos com parceiros de peso. Quer ser um também?</h4>
+            </div>
+        </section>
     </body>
 </html>
