--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
     <body>
         <nav class="navbar navbar-expand-lg navbar-ligth">
-            <a class="navbar-brand" href="#">
-                <img src="img/logoGL.png" width="130px"/>
-            </a>
+            <img src="img/logoGL.png" class="logoGL" width="150px"/>
+            <a class="navbar-brand" href="#"></a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -30,15 +29,16 @@
         <section id="quemsomos">
             <div class="container-fluid quem-somos text-center margin">
                 <h2>Quem somos?</h2>
-                <img src="img/time.png" class="rounded-circle" width="300px">
-                <h4>Somos um time coprometido com os resultados!</h4>
-            </div>
-        </section>
-        <section id="servicos">
-            <div class="container-fluid servicos text-center margin">
-                <h2>Serviços</h2>
-                <img src="img/site3.jpg" class="rounded-circle" width="300px" height="300px">
-                <h4>Atendemos a todo Brasil com máxima eficiência e prontidão.</h4>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <img src="img/time.png" class="rounded-circle" width="300px">
+                        </div>
+                        <div class="col-lg-6">
+                            <h4>A confiável Wikipedia define um  programador , também chamado de  desenvolvedor,  dev,  codificador  ou  engenheiro de software,  “como uma pessoa que cria software de computador. O termo programador de computador pode se referir a um especialista em uma área de computadores ou a um generalista que escreve código para vários tipos de softwares. Aquele que pratica ou professa uma abordagem formal de programação também pode ser conhecido como  analista de programação. ” Os programadores trabalham com matemática, números e com diferentes linguagens de computador. Eles trabalham no desenvolvimento de vários aplicativos ou softwares. Mas seu principal objetivo é resolver problemas. Ou criando um novo aplicativo ou resolvendo os problemas em ferramentas, programas, aplicativos ou softwares já existentes. Mas se você é um programador, você já sabe disso.</h4>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="parceiros">
@@ -46,22 +46,54 @@
                 <h2>Os Nossos Parceiros</h2>
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-3">
-                            <img src="img/ibmlogo.png" class="ibm" width="230px">
+                        <div class="col-lg-2">
+                            <img src="img/ibmlogo.png" class="ibm" width="100px">
                         </div>
-                        <div class="col-lg-3">
-                            <img src="img/googlelogo.png" width="180px">
+                        <div class="col-lg-2">
+                            <img src="img/googlelogo.png" class="google" width="75px">
                         </div>
-                        <div class="col-lg-3">
-                            <img src="img/applelogo.png" width="200px">
+                        <div class="col-lg-2">
+                            <img src="img/applelogo.png" width="100px">
                         </div>
-                        <div class="col-lg-3">
-                            <img src="img/intellogo.png" width="200px">
+                        <div class="col-lg-2">
+                            <img src="img/microsoftlogo.png" class="microsoft" width="150px">
+                        </div>
+                        <div class="col-lg-2">
+                            <img src="img/youtubelogo.png" class="youtube" width="100px">
+                        </div>
+                        <div class="col-lg-2">
+                            <img src="img/intellogo.png" class="intel"width="100px">
+                        </div>
+                    </div>
+                    <h4>Contamos com parceiros de peso. Quer ser um também?</h4>
+                </div>
+            </div>
+        </section>
+        <section id="servicos">
+            <div class="container-fluid servicos text-center margin">
+                <h2>Serviços</h2>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <h5>Faça o plano de 1 ano e ganhe muitos benefícios.Pra saber quais são é só entrar em contato através do nosso e-mail ou whatsapp!</h5>
+                            <img src="img/site1.jpg" class="serv" width="300px" height="300px">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/site2.jpg" class="serv" width="300px" height="300px">
+                            <h5>Atendemos a todo Brasil com máxima eficiência e prontidão.</h5>
+                        </div>
+                        <div class="col-lg-4">
+                            <h5>Temos os profissinais mais qualificados do mercado, formados em Cambridge, Oxford, Seatle e outros. <br>O MELHOR PRA VOCÊ!</h5>
+                            <img src="img/site3.jpg" class="serv" width="300px" height="300px">
                         </div>
                     </div>
                 </div>
-                <h4>Contamos com parceiros de peso. Quer ser um também?</h4>
             </div>
         </section>
+        <footer id="rodape">
+            <em>Nossos contatos: </em>
+            <img src="img/whatsapp.png" width="30px"> <a href="tel:+5511987588455">(11)98758-8455</a> &nbsp;
+            <img src="img/e-mail.png" width="30px"> <a href="mailto:carlotta.custodio@gmail.com">carlotta.custodio@gmail.com</a>
+        </footer>
     </body>
 </html>
