--- a/index.html
+++ b/index.html
@@ -9,21 +9,47 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-ligth">
+        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
             <img src="img/logoGL.png" class="logoGL" width="150px"/>
-            <a class="navbar-brand" href="#"></a>
+            <a class="navbar-brand" href="#">Menu</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#quemsomos">Quem somos</a>
+                        <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#servicos">servicos</a>
+                        <a class="nav-link" href="index.html#quemsomos">Quem Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#parceiros">Parceiros</a>
+                        <a class="nav-link" href="index.html#parceiros">Parceiros</a>
+                    </li>
+                    <!--<li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Parceiros</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="https://www.ibm.com/br-pt?ar=1">IBM</a>
+                        <a class="dropdown-item" href="index.html#parceiros.google">Google</a>
+                        <a class="dropdown-item" href="index.html#parceiros.apple">Apple</a>
+                        <a class="dropdown-item" href="index.html#parceiros.ibm">Microsoft</a>
+                        <a class="dropdown-item" href="index.html#parceiros.youtube">Youtube</a>
+                        <a class="dropdown-item" href="index.html#parceiros.intel">Intel</a>
+                            <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="index.html#parceiros.sejaparceiro">Seja uma parceiro também</a>
+                    </div>
+                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#servicos">Serviços</a>
                     </li>
                 </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2 pesquisar" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+                </form>
             </div>
         </nav>
         <section id="quemsomos">
@@ -47,25 +73,25 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-2">
-                            <img src="img/ibmlogo.png" class="ibm" width="100px">
+                            <a href="https://www.ibm.com/br-pt?ar=1" target="_blank"><img src="img/ibmlogo.png" class="ibm" width="100px"></a>
                         </div>
                         <div class="col-lg-2">
-                            <img src="img/googlelogo.png" class="google" width="75px">
+                            <a href="https://www.google.com/" target="_blank"><img src="img/googlelogo.png" class="google" width="75px"></a>
                         </div>
                         <div class="col-lg-2">
-                            <img src="img/applelogo.png" width="100px">
+                            <a href="https://www.apple.com/br/?afid=p238%7CsikJb1MHC-dc_mtid_1870765e38482_pcrid_454643522362_pgrid_17049243418_&cid=aos-br-kwgo-brand--slid---product-" target="_blank"><img src="img/applelogo.png" class="apple" width="100px"></a>
                         </div>
                         <div class="col-lg-2">
-                            <img src="img/microsoftlogo.png" class="microsoft" width="150px">
+                            <a href="https://www.microsoft.com/pt-br" target="_blank"><img src="img/microsoftlogo.png" class="microsoft" width="150px"></a>
                         </div>
                         <div class="col-lg-2">
-                            <img src="img/youtubelogo.png" class="youtube" width="100px">
+                            <a href="https://www.youtube.com/" target="_blank"><img src="img/youtubelogo.png" class="youtube" width="100px"></a>
                         </div>
                         <div class="col-lg-2">
-                            <img src="img/intellogo.png" class="intel"width="100px">
+                            <a href="https://www.intel.com.br/content/www/br/pt/homepage.html" target="_blank"><img src="img/intellogo.png" class="intel"width="100px"></a>
                         </div>
                     </div>
-                    <h4>Contamos com parceiros de peso. Quer ser um também?</h4>
+                    <h4>Contamos com parceiros de peso. <a href="sejaparceiro" class="sejaparceiro">Quer ser um também?</a></h4>
                 </div>
             </div>
         </section>
@@ -79,8 +105,8 @@
                             <img src="img/site1.jpg" class="serv" width="300px" height="300px">
                         </div>
                         <div class="col-lg-4">
+                            <h5>Atendemos a todo Brasil com máxima eficiência e prontidão. <br> Vide o valor de frete pra sua cidade! É rápido e prático!</h5>
                             <img src="img/site2.jpg" class="serv" width="300px" height="300px">
-                            <h5>Atendemos a todo Brasil com máxima eficiência e prontidão.</h5>
                         </div>
                         <div class="col-lg-4">
                             <h5>Temos os profissinais mais qualificados do mercado, formados em Cambridge, Oxford, Seatle e outros. <br>O MELHOR PRA VOCÊ!</h5>
@@ -90,8 +116,8 @@
                 </div>
             </div>
         </section>
-        <footer id="rodape">
-            <em>Nossos contatos: </em>
+        <footer class="text-center br-footer">
+            <em>Criado por Laura Carlotta </em>
             <img src="img/whatsapp.png" width="30px"> <a href="tel:+5511987588455">(11)98758-8455</a> &nbsp;
             <img src="img/e-mail.png" width="30px"> <a href="mailto:carlotta.custodio@gmail.com">carlotta.custodio@gmail.com</a>
         </footer>
